Reorder indices and columns

--- a/gun-violence.ipynb
+++ b/gun-violence.ipynb
@@ -13245,11 +13245,15 @@
     "ExecuteTime": {
      "end_time": "2019-08-16T17:40:33.876436Z",
      "start_time": "2019-08-16T17:40:33.550602Z"
-    }
+    },
+    "code_folding": [
+     1
+    ]
    },
    "outputs": [],
    "source": [
     "# Add the Las Vegas shooting incident from 2017\n",
+    "# TODO add it through a csv file instead\n",
     "data.loc[946496] = [dt(2017, 10, 1), 'Nevada', 'Las Vegas', 'Mandalay Bay 3950 Las Vegas Blvd S', \n",
     "                     59, 441, 'https://www.gunviolencearchive.org/incident/946496', \n",
     "                     'https://www.nytimes.com/2017/10/02/us/las-vegas-shooting-live-updates.html?smid=tw-nytimes&smtyp=cur', \n",
@@ -13265,6 +13269,29 @@
     "                     '0::Victim||1::Victim||2::Victim||3::Victim||4::Victim||5::Victim||6::Victim||7::Victim||8::Victim||9::Victim||10::Victim||11::Victim||12::Victim||13::Victim||14::Victim||15::Victim||16::Victim||17::Victim||18::Victim||19::Victim||20::Victim||21::Victim||22::Victim||23::Victim||24::Victim||25::Victim||26::Victim||27::Victim||28::Victim||29::Victim||30::Victim||31::Victim||32::Victim||33::Victim||34::Victim||35::Victim||36::Victim||37::Victim||38::Victim||39::Victim||40::Victim||41::Victim||42::Victim||43::Victim||44::Victim||45::Victim||46::Victim||47::Victim||48::Victim||49::Victim||50::Victim||51::Victim||52::Victim||53::Victim||54::Victim||55::Victim||56::Victim||57::Victim||58::Victim||59::Victim||60::Victim||61::Victim||62::Victim||63::Victim||64::Victim||65::Victim||66::Victim||67::Victim||68::Victim||69::Victim||70::Victim||71::Victim||72::Victim||73::Victim||74::Victim||75::Victim||76::Victim||77::Victim||78::Victim||79::Victim||80::Victim||81::Victim||82::Victim||83::Victim||84::Victim||85::Victim||86::Victim||87::Victim||88::Victim||89::Victim||90::Victim||91::Victim||92::Victim||93::Victim||94::Victim||95::Victim||96::Victim||97::Victim||98::Victim||99::Victim||100::Victim||101::Victim||102::Victim||103::Victim||104::Victim||105::Victim||106::Victim||107::Victim||108::Victim||109::Victim||110::Victim||111::Victim||112::Victim||113::Victim||114::Victim||115::Victim||116::Victim||117::Victim||118::Victim||119::Victim||120::Victim||121::Victim||122::Victim||123::Victim||124::Victim||125::Victim||126::Victim||127::Victim||128::Victim||129::Victim||130::Victim||131::Victim||132::Victim||133::Victim||134::Victim||135::Victim||136::Victim||137::Victim||138::Victim||139::Victim||140::Victim||141::Victim||142::Victim||143::Victim||144::Victim||145::Victim||146::Victim||147::Victim||148::Victim||149::Victim||150::Victim||151::Victim||152::Victim||153::Victim||154::Victim||155::Victim||156::Victim||157::Victim||158::Victim||159::Victim||160::Victim||161::Victim||162::Victim||163::Victim||164::Victim||165::Victim||166::Victim||167::Victim||168::Victim||169::Victim||170::Victim||171::Victim||172::Victim||173::Victim||174::Victim||175::Victim||176::Victim||177::Victim||178::Victim||179::Victim||180::Victim||181::Victim||182::Victim||183::Victim||184::Victim||185::Victim||186::Victim||187::Victim||188::Victim||189::Victim||190::Victim||191::Victim||192::Victim||193::Victim||194::Victim||195::Subject-Suspect',\n",
     "                     'http://abcnews.go.com/US/guns-loaded-high-capacity-magazines-found-vegas- shooters/story?id=50228093||https://www.usatoday.com/story/news/2017/10/03/heres-timeline-how-las-vegas-shooting- unfolded/729034001/||https://www.nbcnews.com/storyline/las-vegas-shooting/las-vegas-shooting-59-killed-more-500- hurt-near-mandalay-n806461||http://www.clarkcountynv.gov/public-communications/Pages/Clark-County-Coroner-Releases- Names-of-Deceased-from-Oct--1-Mass-Shooting.aspx',\n",
     "                     np.NaN, np.NaN]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T17:57:47.255932Z",
+     "start_time": "2019-08-16T17:57:47.066549Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Reorder newly created dataframe\n",
+    "data = data.sort_values(by=[\"Date\"])\n",
+    "\n",
+    "# Rearrange the columns for readibility\n",
+    "data = data[['Date', 'State', 'City/County', 'Address', 'Latitude', 'Longitude', \n",
+    "             'Location Description', 'Nr Killed', 'Nr Injured', 'Incident Characteristics', \n",
+    "             'Nr Guns Involved', 'Gun Stolen', 'Gun Type', 'Notes', 'Participant Name', 'Participant Age', \n",
+    "             'Participant Age Group', 'Participant Gender', 'Participant Relationship', 'Participant Status', \n",
+    "             'Participant Type', 'Incident URL', 'Source URL', 'Sources', 'Congressional District', \n",
+    "             'State House District', 'State Senate District']]"
    ]
   },
   {
