Transform dataset entries in Python data structures

--- a/gun-violence.ipynb
+++ b/gun-violence.ipynb
@@ -19,11 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-16T17:40:29.169316Z",
-     "start_time": "2019-08-16T17:40:25.746741Z"
+     "end_time": "2019-08-17T09:16:00.722762Z",
+     "start_time": "2019-08-17T09:15:56.938588Z"
     },
     "code_folding": [
      3
@@ -13222,11 +13222,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-16T17:40:33.050841Z",
-     "start_time": "2019-08-16T17:40:32.745205Z"
+     "end_time": "2019-08-17T09:16:04.168653Z",
+     "start_time": "2019-08-17T09:16:03.923521Z"
     }
    },
    "outputs": [],
@@ -13240,11 +13240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-16T17:40:33.876436Z",
-     "start_time": "2019-08-16T17:40:33.550602Z"
+     "end_time": "2019-08-17T09:16:10.825829Z",
+     "start_time": "2019-08-17T09:16:10.545785Z"
     },
     "code_folding": [
      1
@@ -13273,11 +13273,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-16T17:57:47.255932Z",
-     "start_time": "2019-08-16T17:57:47.066549Z"
+     "end_time": "2019-08-17T09:16:11.309413Z",
+     "start_time": "2019-08-17T09:16:10.830790Z"
     }
    },
    "outputs": [],
@@ -13292,6 +13292,98 @@
     "             'Participant Age Group', 'Participant Gender', 'Participant Relationship', 'Participant Status', \n",
     "             'Participant Type', 'Incident URL', 'Source URL', 'Sources', 'Congressional District', \n",
     "             'State House District', 'State Senate District']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-17T09:18:54.900767Z",
+     "start_time": "2019-08-17T09:18:54.892337Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Function to split a dictionary string into a Python dictinary\n",
+    "def split_into_str_dict(string):\n",
+    "    str_dict = dict()\n",
+    "    if pd.isnull(string):\n",
+    "        return np.nan\n",
+    "    # Split the string by '|' or '||', depending on the format\n",
+    "    list = '#$%'.join('#$%'.join(string.split('||')).split('|')).split('#$%')\n",
+    "    for index in list:\n",
+    "        # If indices and values are split by '::'\n",
+    "        i, sep, v = index.partition('::')\n",
+    "        if sep and v:\n",
+    "            str_dict[int(i)] = v\n",
+    "        # If indices and values are split by ':'\n",
+    "        else:\n",
+    "            i, _, v = index.partition(':')\n",
+    "            str_dict[int(i)] = v\n",
+    "    return str_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-17T09:19:03.994189Z",
+     "start_time": "2019-08-17T09:19:03.987638Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Function to split a list string into a Python list\n",
+    "def split_into_list(string):\n",
+    "    if pd.isnull(string):\n",
+    "        return np.nan\n",
+    "    # Split the string by '|' or '||', depending on the format\n",
+    "    return '#$%'.join('#$%'.join(string.split('||')).split('|')).split('#$%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-17T09:19:09.446530Z",
+     "start_time": "2019-08-17T09:19:09.441048Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Function to convert a dictionary's values to int\n",
+    "def convert_dict_to_int(str_dict):\n",
+    "    if pd.isnull(str_dict):\n",
+    "        return np.nan\n",
+    "    for key in str_dict:\n",
+    "        str_dict[key] = int(str_dict[key])\n",
+    "    return str_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-17T09:21:13.207208Z",
+     "start_time": "2019-08-17T09:21:01.463233Z"
+    },
+    "code_folding": []
+   },
+   "outputs": [],
+   "source": [
+    "# Apply the previous 3 functions to the relevant columns in the dataset\n",
+    "data[['Gun Stolen', 'Gun Type', 'Participant Name', 'Participant Age', 'Participant Age Group', \n",
+    "      'Participant Gender', 'Participant Relationship', 'Participant Status', \n",
+    "      'Participant Type']] = data[['Gun Stolen', 'Gun Type', 'Participant Name', \n",
+    "                                   'Participant Age', 'Participant Age Group', \n",
+    "                                   'Participant Gender', 'Participant Relationship', \n",
+    "                                   'Participant Status', 'Participant Type']].applymap(split_into_str_dict)\n",
+    "data[['Participant Age']] = data[['Participant Age']].applymap(convert_dict_to_int)\n",
+    "data[['Incident Characteristics', 'Sources']] = data[['Incident Characteristics', 'Sources']].applymap(split_into_list)"
    ]
   },
   {
