--- a/gun-violence.ipynb
+++ b/gun-violence.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-16T17:40:07.744966Z",
-     "start_time": "2019-08-16T17:40:07.740346Z"
+     "end_time": "2019-08-17T13:50:08.189517Z",
+     "start_time": "2019-08-17T13:50:08.182651Z"
     }
    },
    "outputs": [],
@@ -14,16 +14,23 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pandas_profiling\n",
-    "from datetime import datetime as dt"
+    "import re\n",
+    "import itertools\n",
+    "\n",
+    "from datetime import datetime as dt\n",
+    "from fuzzywuzzy import fuzz\n",
+    "from fuzzywuzzy import process\n",
+    "from functools import reduce\n",
+    "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-17T09:16:00.722762Z",
-     "start_time": "2019-08-17T09:15:56.938588Z"
+     "end_time": "2019-08-17T13:50:12.276705Z",
+     "start_time": "2019-08-17T13:50:08.819459Z"
     },
     "code_folding": [
      3
@@ -13222,11 +13229,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-17T09:16:04.168653Z",
-     "start_time": "2019-08-17T09:16:03.923521Z"
+     "end_time": "2019-08-17T13:50:16.744788Z",
+     "start_time": "2019-08-17T13:50:16.541642Z"
     }
    },
    "outputs": [],
@@ -13240,11 +13247,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-17T09:16:10.825829Z",
-     "start_time": "2019-08-17T09:16:10.545785Z"
+     "end_time": "2019-08-17T13:50:17.590409Z",
+     "start_time": "2019-08-17T13:50:17.357646Z"
     },
     "code_folding": [
      1
@@ -13273,11 +13280,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-17T09:16:11.309413Z",
-     "start_time": "2019-08-17T09:16:10.830790Z"
+     "end_time": "2019-08-17T13:50:18.620920Z",
+     "start_time": "2019-08-17T13:50:18.258633Z"
     }
    },
    "outputs": [],
@@ -13296,11 +13303,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-17T09:18:54.900767Z",
-     "start_time": "2019-08-17T09:18:54.892337Z"
+     "end_time": "2019-08-17T13:50:19.537570Z",
+     "start_time": "2019-08-17T13:50:19.527737Z"
     }
    },
    "outputs": [],
@@ -13326,11 +13333,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-17T09:19:03.994189Z",
-     "start_time": "2019-08-17T09:19:03.987638Z"
+     "end_time": "2019-08-17T13:50:20.501900Z",
+     "start_time": "2019-08-17T13:50:20.495273Z"
     }
    },
    "outputs": [],
@@ -13345,11 +13352,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-17T09:19:09.446530Z",
-     "start_time": "2019-08-17T09:19:09.441048Z"
+     "end_time": "2019-08-17T13:50:21.429897Z",
+     "start_time": "2019-08-17T13:50:21.424076Z"
     }
    },
    "outputs": [],
@@ -13365,11 +13372,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-17T09:21:13.207208Z",
-     "start_time": "2019-08-17T09:21:01.463233Z"
+     "end_time": "2019-08-17T13:50:34.291915Z",
+     "start_time": "2019-08-17T13:50:22.416969Z"
     },
     "code_folding": []
    },
@@ -13384,6 +13391,159 @@
     "                                   'Participant Status', 'Participant Type']].applymap(split_into_str_dict)\n",
     "data[['Participant Age']] = data[['Participant Age']].applymap(convert_dict_to_int)\n",
     "data[['Incident Characteristics', 'Sources']] = data[['Incident Characteristics', 'Sources']].applymap(split_into_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-17T13:50:45.655072Z",
+     "start_time": "2019-08-17T13:50:45.647065Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Lookup dictionary of common address abbreviations found in the dataset\n",
+    "lookup_dict = {\"Pkwy\": \"Parkway\", \"Blvd\": \" Boulevard\", \"Rd\": \"Road\", \"Dr \": \"Drive \", \"Dr,\": \"Drive,\", \n",
+    "               \"Ave \": \"Avenue \", \"Ave,\": \"Avenue,\", \"St,\": \"Street,\", \"avenues\": \"Avenues\",\n",
+    "               \"Block\": \"block\", \"Expwy\": \"Expressway\", \"Pl \": \"Place \", \"Pl,\": \"Place,\", \n",
+    "               \"Johns\": \"John's\", \"Ln\": \"Lane\", \"North\": \"N\", \"South\": \"S\", \"East\": \"E\", \"West\": \"W\",\n",
+    "               \"Av \": \"Avenue\", \"Av,\": \"Avenue,\"}\n",
+    "\n",
+    "pattern = re.compile(r'\\b(' + '|'.join(lookup_dict.keys()) + r')\\b')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-17T13:50:46.474276Z",
+     "start_time": "2019-08-17T13:50:46.464779Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Function to format white spaces neatly in an address string\n",
+    "def clean_whitespaces(address):\n",
+    "    # Remove double spaces\n",
+    "    new_address = re.sub(' +', ' ', address)\n",
+    "    # Remove spaces before comma\n",
+    "    new_address = re.sub(' ,', ',', new_address)\n",
+    "    # Revove spaces at the beginning and end of an address\n",
+    "    new_address = re.sub(r'^\\s+', '', new_address, flags=re.UNICODE)\n",
+    "    new_address = re.sub(r\"\\s+$\", \"\", new_address, flags=re.UNICODE)\n",
+    "    return new_address"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-17T13:50:48.847067Z",
+     "start_time": "2019-08-17T13:50:48.838709Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def clean_address_string(address):\n",
+    "    if pd.notnull(address):\n",
+    "        # Remove periods\n",
+    "        new_address = re.sub(\"\\.\", \"\", address)\n",
+    "        # Add a space at the end of the address to allow some of the lookup_dict to take place\n",
+    "        address = address + \" \"\n",
+    "        # Apply lookup_dict rules\n",
+    "        new_address = reduce(lambda x, y: x.replace(y, lookup_dict[y]), lookup_dict, new_address)\n",
+    "        # Transform the addresses according to lookup dictionary\n",
+    "        new_address = re.sub(r\"^\\s+\", \"\", new_address,  flags=re.UNICODE)\n",
+    "        new_address = clean_whitespaces(new_address)\n",
+    "        return new_address\n",
+    "    else:\n",
+    "        return np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-17T13:50:54.169479Z",
+     "start_time": "2019-08-17T13:50:49.428278Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Create a counter of the transformed non-null addresses (address, city/county)\n",
+    "addresses = data[pd.notnull(data['Address'])][\"Address\"]\n",
+    "new_addresses = []\n",
+    "\n",
+    "for a in addresses:\n",
+    "    new_addresses.append(clean_address_string(a))\n",
+    "\n",
+    "c = Counter(list(new_addresses))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-17T13:50:57.761905Z",
+     "start_time": "2019-08-17T13:50:56.205317Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-66509b738b8b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'N |E |S |W '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;31m# Clean whitespaces\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclean_whitespaces\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclean_whitespaces\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-13-885a2d6bd315>\u001b[0m in \u001b[0;36mclean_whitespaces\u001b[0;34m(address)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mnew_address\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' +'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maddress\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m# Remove spaces before comma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mnew_address\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' ,'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m','\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_address\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;31m# Revove spaces at the beginning and end of an address\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mnew_address\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr'^\\s+'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_address\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mUNICODE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/re.py\u001b[0m in \u001b[0;36msub\u001b[0;34m(pattern, repl, string, count, flags)\u001b[0m\n\u001b[1;32m    189\u001b[0m     \u001b[0ma\u001b[0m \u001b[0mcallable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mit\u001b[0m\u001b[0;31m'\u001b[0m\u001b[0ms\u001b[0m \u001b[0mpassed\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mmatch\u001b[0m \u001b[0mobject\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mmust\u001b[0m \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    190\u001b[0m     a replacement string to be used.\"\"\"\n\u001b[0;32m--> 191\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_compile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrepl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    192\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    193\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0msubn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrepl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# Find combinations of addresses that have between 0.95 and 0.99 similarity,\n",
+    "# disregarding numbers of streets and cardinals\n",
+    "for a, b in itertools.combinations(c.keys(), 2):\n",
+    "    a_ = a; b_ = b\n",
+    "    # Remove orders\n",
+    "    a = re.sub('([0-9]*th|[0-9]*1st|[0-9]*2nd|[0-9]*3rd)', ' ', a)\n",
+    "    b = re.sub('([0-9]*th|[0-9]*1st|[0-9]*2nd|[0-9]*3rd)', ' ', b)\n",
+    "    # Remove digits\n",
+    "    a = re.sub('[0-9]*', '', a)\n",
+    "    b = re.sub('[0-9]*', '', b)\n",
+    "    # Remove cardinal points\n",
+    "    a = re.sub('N |E |S |W ', ' ', a)\n",
+    "    b = re.sub('N |E |S |W ', ' ', b)\n",
+    "    # Clean whitespaces\n",
+    "    a = clean_whitespaces(a)\n",
+    "    b = clean_whitespaces(b)\n",
+    "    \n",
+    "    fr = fuzz.ratio(a, b)\n",
+    "    if fr in range(95, 100):\n",
+    "        print(a_ + \"   \" + b_ + \"   \" + str(fr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-17T13:51:12.627635Z",
+     "start_time": "2019-08-17T13:51:00.463047Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "data[['Address']] = data[['Address']].applymap(clean_address_string)"
    ]
   },
   {
