Split the suspect population method in multiple functions - still not working properly

--- a/gun-violence.ipynb
+++ b/gun-violence.ipynb
@@ -2,11 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 352,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-20T12:11:46.120386Z",
-     "start_time": "2019-08-20T12:11:46.102584Z"
+     "end_time": "2019-08-20T19:55:30.247177Z",
+     "start_time": "2019-08-20T19:55:30.235007Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import pandas_profiling\n",
+    "import re\n",
+    "import Levenshtein as lev\n",
+    "import random\n",
+    "from inspect import getargvalues, stack\n",
+    "\n",
+    "from datetime import datetime as dt\n",
+    "from functools import reduce\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-20T19:55:30.266218Z",
+     "start_time": "2019-08-20T19:55:30.253516Z"
     }
    },
    "outputs": [
@@ -20,44 +46,25 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import pandas_profiling\n",
-    "import re\n",
-    "import itertools\n",
-    "import matplotlib.pyplot as plt\n",
-    "import Levenshtein as lev\n",
-    "import random\n",
-    "\n",
-    "from datetime import datetime as dt\n",
-    "from fuzzywuzzy import fuzz\n",
-    "from functools import reduce\n",
-    "from collections import Counter\n",
-    "\n",
-    "%load_ext Cython\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "%load_ext Cython"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 354,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-19T17:05:10.550306Z",
-     "start_time": "2019-08-19T17:05:06.146130Z"
+     "end_time": "2019-08-20T19:55:34.125887Z",
+     "start_time": "2019-08-20T19:55:30.271119Z"
     },
-    "code_folding": [
-     3
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
     "data = pd.read_csv(\"gun-violence-data_01-2013_03-2018.csv\")\n",
     "\n",
     "# Index incidents using Incident ID\n",
-    "features = ['Incident ID', 'Date', 'State', 'City/County', 'Address', 'Nr Killed', 'Nr Injured',\n",
+    "data.columns = ['Incident ID', 'Date', 'State', 'City/County', 'Address', 'Nr Killed', 'Nr Injured',\n",
     "           'Incident URL', 'Source URL', 'Incident URL Fields Missing',\n",
     "           'Congressional District', 'Gun Stolen', 'Gun Type',\n",
     "           'Incident Characteristics', 'Latitude', 'Location Description',\n",
@@ -65,7 +72,6 @@
     "           'Participant Age Group', 'Participant Gender', 'Participant Name',\n",
     "           'Participant Relationship', 'Participant Status', 'Participant Type',\n",
     "           'Sources', 'State House District', 'State Senate District']\n",
-    "data.columns = features\n",
     "data.set_index(\"Incident ID\", inplace=True)"
    ]
   },
@@ -81,7 +87,8 @@
     "editable": false,
     "run_control": {
      "frozen": true
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -13250,11 +13257,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 355,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-19T17:05:11.689155Z",
-     "start_time": "2019-08-19T17:05:10.554018Z"
+     "end_time": "2019-08-20T19:55:34.800162Z",
+     "start_time": "2019-08-20T19:55:34.129719Z"
     }
    },
    "outputs": [],
@@ -13270,13 +13277,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 356,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-19T17:05:11.917338Z",
-     "start_time": "2019-08-19T17:05:11.716026Z"
+     "end_time": "2019-08-20T19:55:34.925945Z",
+     "start_time": "2019-08-20T19:55:34.805859Z"
     },
-    "code_folding": []
+    "code_folding": [
+     1
+    ]
    },
    "outputs": [],
    "source": [
@@ -13288,11 +13297,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 357,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-19T17:05:12.129658Z",
-     "start_time": "2019-08-19T17:05:11.931918Z"
+     "end_time": "2019-08-20T19:55:35.043143Z",
+     "start_time": "2019-08-20T19:55:34.928942Z"
     }
    },
    "outputs": [],
@@ -13303,12 +13312,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 358,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-19T17:05:12.218668Z",
-     "start_time": "2019-08-19T17:05:12.133053Z"
-    }
+     "end_time": "2019-08-20T19:55:35.109570Z",
+     "start_time": "2019-08-20T19:55:35.045396Z"
+    },
+    "code_folding": [
+     1
+    ]
    },
    "outputs": [],
    "source": [
@@ -13321,12 +13333,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 359,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-19T17:05:12.238092Z",
-     "start_time": "2019-08-19T17:05:12.222516Z"
-    }
+     "end_time": "2019-08-20T19:55:35.123230Z",
+     "start_time": "2019-08-20T19:55:35.112089Z"
+    },
+    "code_folding": [
+     1
+    ]
    },
    "outputs": [],
    "source": [
@@ -13351,12 +13366,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 360,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-19T17:05:12.247586Z",
-     "start_time": "2019-08-19T17:05:12.241332Z"
-    }
+     "end_time": "2019-08-20T19:55:35.133569Z",
+     "start_time": "2019-08-20T19:55:35.126142Z"
+    },
+    "code_folding": [
+     1
+    ]
    },
    "outputs": [],
    "source": [
@@ -13370,12 +13388,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 361,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-19T17:05:12.259646Z",
-     "start_time": "2019-08-19T17:05:12.251660Z"
-    }
+     "end_time": "2019-08-20T19:55:35.150451Z",
+     "start_time": "2019-08-20T19:55:35.140901Z"
+    },
+    "code_folding": [
+     1
+    ]
    },
    "outputs": [],
    "source": [
@@ -13390,11 +13411,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 362,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-19T17:05:38.483948Z",
-     "start_time": "2019-08-19T17:05:12.264150Z"
+     "end_time": "2019-08-20T19:55:47.324711Z",
+     "start_time": "2019-08-20T19:55:35.154908Z"
     },
     "code_folding": []
    },
@@ -13413,12 +13434,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 363,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-20T12:11:10.187072Z",
-     "start_time": "2019-08-20T12:11:10.127296Z"
-    }
+     "end_time": "2019-08-20T19:55:47.336510Z",
+     "start_time": "2019-08-20T19:55:47.326527Z"
+    },
+    "code_folding": [
+     1
+    ]
    },
    "outputs": [],
    "source": [
@@ -13432,19 +13456,20 @@
     "               \"SouthEast\": \"SE\", \"North-West\": \"NW\", \"South-West\": \"SW\", \"North-East\": \"NE\",\n",
     "               \"South-East\": \"SE\", \"North \": \"N \", \"South \": \"S \", \"East \": \"E \", \"West \": \"W \",\n",
     "               \"North$\": \"N\", \"South$\": \"S\", \"East$\": \"E\", \"West$\": \"W\", \"Av \": \"Avenue \", \n",
-    "               \"Av$\": \"Avenue\", \"St$\": \"Street\", \"Stree$\": \"Street\", \"street\": \"Street\"}\n",
-    "\n",
-    "pattern = re.compile(r'\\b(' + '|'.join(lookup_dict.keys()) + r')\\b')"
+    "               \"Av$\": \"Avenue\", \"St$\": \"Street\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 364,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-20T12:11:11.110909Z",
-     "start_time": "2019-08-20T12:11:11.097610Z"
-    }
+     "end_time": "2019-08-20T19:55:47.351167Z",
+     "start_time": "2019-08-20T19:55:47.341657Z"
+    },
+    "code_folding": [
+     1
+    ]
    },
    "outputs": [],
    "source": [
@@ -13462,30 +13487,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 365,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-20T13:12:01.157902Z",
-     "start_time": "2019-08-20T13:12:01.149760Z"
-    }
+     "end_time": "2019-08-20T19:55:47.362981Z",
+     "start_time": "2019-08-20T19:55:47.355557Z"
+    },
+    "code_folding": [
+     1
+    ]
    },
    "outputs": [],
    "source": [
+    "# Function to remove special characters such as dashes (-), commas (,), or slashes (/) from an address string\n",
     "def clean_special_characters(address):\n",
-    "        # Remove periods\n",
-    "        new_address = re.sub(\"\\.\", \"\", address)\n",
-    "        # Remove commas, dashes, slashes\n",
-    "        new_address = re.sub(\",|\\-|\\/\", \" \", new_address)"
+    "    # Remove periods\n",
+    "    new_address = re.sub(\"\\.\", \"\", address)\n",
+    "    # Remove commas, dashes, slashes\n",
+    "    new_address = re.sub(\",|\\-|\\/\", \" \", new_address)\n",
+    "    return new_address"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 366,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-20T13:12:14.303443Z",
-     "start_time": "2019-08-20T13:12:14.296058Z"
-    }
+     "end_time": "2019-08-20T19:55:47.373734Z",
+     "start_time": "2019-08-20T19:55:47.368363Z"
+    },
+    "code_folding": [
+     2
+    ]
    },
    "outputs": [],
    "source": [
@@ -13504,35 +13537,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 80,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-20T12:48:52.313121Z",
-     "start_time": "2019-08-20T12:48:35.667279Z"
+     "end_time": "2019-08-20T17:21:49.527484Z",
+     "start_time": "2019-08-20T17:21:49.518302Z"
     },
-    "code_folding": []
-   },
-   "outputs": [],
-   "source": [
-    "# Create a dictionary of unique transformed non-null addresses; this is to speed up the next operations as it avoids comparing the same strings twice\n",
-    "unique_addresses = dict()\n",
-    "index = 0\n",
-    "for item in list(set(data[pd.notnull(data['Address'])][\"Address\"].apply(clean_address_string))):\n",
-    "    unique_addresses[index] = item\n",
-    "    index += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 438,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-20T12:50:16.548545Z",
-     "start_time": "2019-08-20T12:50:16.539098Z"
+    "code_folding": [
+     0
+    ],
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
     }
    },
    "outputs": [],
    "source": [
+    "# Function to remove house/street numbers from address\n",
     "def clean_unique_address(address):\n",
     "    # Remove orders\n",
     "    address = re.sub('([0-9]*th|[0-9]*1st|[0-9]*2nd|[0-9]*3rd)', ' ', address)\n",
@@ -13547,34 +13569,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 81,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-20T12:51:05.573130Z",
-     "start_time": "2019-08-20T12:51:01.522074Z"
+     "end_time": "2019-08-20T17:22:10.371898Z",
+     "start_time": "2019-08-20T17:21:50.485015Z"
+    },
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
     }
    },
    "outputs": [],
    "source": [
     "# Compare addresses only after removing numbers to ensure that the dissimilarity is not caused by houses/streets of different numbers\n",
     "lev_addresses = dict()\n",
-    "for key, value in unique_addresses.items():\n",
-    "    lev_addresses[key] = clean_unique_address(value)"
+    "for item in list(set(data[pd.notnull(data['Address'])][\"Address\"].apply(clean_address_string))):\n",
+    "    lev_addresses[index] = clean_unique_address(item)\n",
+    "    index += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 83,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-20T12:51:19.585810Z",
-     "start_time": "2019-08-20T12:51:19.515420Z"
+     "end_time": "2019-08-20T17:22:42.619630Z",
+     "start_time": "2019-08-20T17:22:42.568008Z"
+    },
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
     }
    },
    "outputs": [],
    "source": [
     "# Sample 1% of the addresses\n",
-    "sample_lev_addresses = dict(random.sample(lev_addresses.items(), 1884))"
+    "lev_addresses = dict(random.sample(lev_addresses.items(), 1884))"
    ]
   },
   {
@@ -13585,6 +13618,7 @@
      "end_time": "2019-08-20T13:02:35.321206Z",
      "start_time": "2019-08-20T12:52:07.137458Z"
     },
+    "collapsed": true,
     "deletable": false,
     "editable": false,
     "run_control": {
@@ -14935,11 +14969,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 367,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-20T13:06:45.706708Z",
-     "start_time": "2019-08-20T13:06:11.070341Z"
+     "end_time": "2019-08-20T19:56:20.839255Z",
+     "start_time": "2019-08-20T19:55:47.377776Z"
     }
    },
    "outputs": [],
@@ -14949,11 +14983,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 368,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-20T13:15:09.638147Z",
-     "start_time": "2019-08-20T13:15:09.569945Z"
+     "end_time": "2019-08-20T19:56:20.894719Z",
+     "start_time": "2019-08-20T19:56:20.841491Z"
     }
    },
    "outputs": [],
@@ -14963,29 +14997,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 374,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-18T13:32:33.054409Z",
-     "start_time": "2019-08-18T13:32:31.978560Z"
+     "end_time": "2019-08-20T19:57:05.489206Z",
+     "start_time": "2019-08-20T19:57:05.482038Z"
     }
    },
    "outputs": [],
    "source": [
-    "# use dict.get for missing info\n",
-    "\n",
-    "for index, row in data_.iterrows():\n",
+    "def populate_suspect_columns(key, row):\n",
+    "    for attribute in [\"Name\", \"Age\", \"Age Group\", \"Gender\", \"Relationship\", \"Status\"]:\n",
+    "        if pd.notnull(row[\"Participant \" + attribute]):\n",
+    "            if key in row[\"Participant \" + attribute].keys():\n",
+    "                row[\"Suspect \" + attribute][key] = row[\"Participant \" + attribute][key]\n",
+    "        else:\n",
+    "            row[\"Suspect \" + attribute][key] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 375,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-20T19:57:06.257317Z",
+     "start_time": "2019-08-20T19:57:06.248186Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def find_suspect(row):\n",
     "    if pd.notnull(row[\"Participant Type\"]):\n",
     "        for key, value in row[\"Participant Type\"].items():\n",
-    "            if value == 'Subject-Suspect':\n",
-    "                for attribute in [\"Name\", \"Age\", \"Age Group\", \"Gender\", \"Relationship\", \"Status\"]:\n",
-    "                    if pd.notnull(data.loc[index][\"Participant \" + attribute]):\n",
-    "                        if key in data.loc[index][\"Participant \" + attribute]:\n",
-    "                            data.at[index, \"Suspect \" + attribute][key] = data.loc[index][\"Participant \" + attribute][key]\n",
-    "                        else:\n",
-    "                            data.at[index, \"Suspect \" + attribute] = np.nan\n",
-    "                    else:\n",
-    "                        data.at[index, \"Suspect \" + attribute] = np.nan"
+    "            if value == \"Subject-Suspect\":\n",
+    "                populate_suspect_columns(key, row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-08-20T19:57:06.512Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "data.apply(find_suspect, axis=1)"
    ]
   },
   {
